# GBridge

./: README.md  config.ini
Client/src/: App.js  App.tsx  app.json  example.json  index.js  package-lock.json  package.json  tcp.js
Client/src/__tests__/: tcp.js
Client/src/android/: gradle.properties  settings.gradle
Client/src/components/: BaseComponent.js  BaseConComponent.js  EmailInput.js  InfoInputs.js  InputModel.js  LoanRepaymentList.js  MarkerComponent.js  MarketComponent.js  MyButton.js  NotificationBoard.js  NumberInput.js  ProfileBoard.js  RequestDetail.js  RuleTextInput.js  ScoreBoard.js  UserRequests.js  VerificationCodeInput.js
Client/src/config/: Global.js  config.json
Client/src/ios/: Podfile
Client/src/screens/: AdviceInterface.js  AdviserInterface.js  BaseConInterface.js  BaseInterface.js  ChatInterface.js  ChatInterface1.js  HomeScreen.js  InvestmentInterface.js  LoanAppDetail.js  LoanInterface.js  LoginInterface.js  MatchInterface.js  PersonalInfo.js  PersonalPage.js  PersonalSettings.js  PostInterface.js  RegisterInterface.js  RepaymentInterface.js  ScoreInterface.js  VerificationInterface.js  WelcomeInterface.js
Client/src/tests/: AppTest.js
Server/gbridge_server/: .gitignore  Cargo.toml
Server/gbridge_server/src/: config.rs  lib.rs  main.rs  main_server.rs  server_config.rs
Server/gbridge_server/src/main_server/: adviser.rs  authenticator.rs  chatter.rs  config.rs  data_structure.rs  data_sturct.rs  database.rs  session.rs  utils.rs  workers.rs
Server/gbridge_server/tests/: tcp_listener.rs
TestClient/test_client/: Cargo.toml
(+20 files in other folders)
