[package]
name = "gbridge_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "*"
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
serde_json = "1.0"
regex = "1.10.4"
lazy_static = "1.4.0"
chrono = "0.4.19"
chatgpt_rs = "1.2.3"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]